--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,10 @@ body {
     font-size: 13px;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
+header {
+    width: fit-content;
+    display: grid;
+    gap: 1rem;
 }
 
 h1 img {
@@ -41,7 +41,17 @@ h1 {
     align-items: center;
     gap: 0.5rem;
     color: black;
-    margin-bottom: 1.5%;
+}
+
+hr {
+    width: 80%;
+    border: 1px dashed lightgray;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
 
 .info {
@@ -56,18 +66,6 @@ h1 {
 section {
     display: grid;
     gap: 2rem;
-}
-
-#otimizacao {
-    display: grid;
-    gap: 1rem;
-}
-
-#otimizacao .area {
-    background-color: var(--primary-bgc);
-    padding: 1.2rem;
-    border-radius: 0 5px 5px 0;
-    border-left: 0.5rem solid var(--secondary-bgc);
 }
 
 .area {
@@ -91,33 +89,54 @@ section {
     color: #5c5c5c;
 }
 
+#otimizacao .otimizacoes {
+    display: grid;
+    gap: 1rem;
+}
+
+#otimizacao .area {
+    padding: 1.2rem;
+    border-radius: 0 5px 5px 0;
+    border-left: 0.2rem solid var(--secondary-bgc);
+}
+
 #gaps {
     display: grid;
-    /* grid-template-columns: repeat(2, 1fr); */
     gap: 2rem;
 }
 
 #gaps .areas {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
+    gap: 0.7rem;
 }
 
 #gaps .area-header {
     color: hsl(5, 80%, 35%);
 }
 
+#gaps .area {
+    padding: 1rem;
+    border-radius: 5px;
+    border: 1px dashed hsl(5, 36%, 80%);
+}
+
 #recomendacoes ul {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr); */
     gap: 0.7rem;
 }
 
 #recomendacoes ul li {
-    border: 1px solid #bbbbbb;
-    list-style: none;
+    width: fit-content;
+    list-style: decimal inside;
+    border-left: 0.3rem solid #bbbbbb;
     padding: 0.7rem;
-    border-radius: 3px;
+}
+
+li::marker {
+    font-weight: bold;
+    color: rgb(34, 84, 150);
 }
 
 @media (max-width: 768px) {
